--- a/Atmecs/pom.xml
+++ b/Atmecs/pom.xml
@@ -37,31 +37,36 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.1.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.directory.studio</groupId>
+			<artifactId>org.apache.commons.io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		
 
 	</dependencies>
 
 	<build>
-<plugins>
-   
-     <plugin>
-       <groupId>org.apache.maven.plugins</groupId>
-       <artifactId>maven-surefire-plugin</artifactId>
-       <version>3.0.0-M3</version>
-       <configuration>
-         <suiteXmlFiles>
-           <suiteXmlFile>testng.xml</suiteXmlFile>
-         </suiteXmlFiles>
-       </configuration>
-     </plugin>
-   
-</plugins>
+		<plugins>
 
-</build>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M3</version>
+				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+
+		</plugins>
+
+	</build>
 
 </project>
